Prevent horizontal scroll on Safari

--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -6,10 +6,7 @@
 *::after
   box-sizing: border-box
 
-html
-  width: 100%
-  height: 100%
-
+html,
 body
   margin: 0
   padding: 0
@@ -21,6 +18,7 @@ body
   width: 100%
   height: 100%
 
+body
   background: $black
 
   font-family: 'Manrope Variable'
